fix spacing

--- a/my-portfolio/resources/css/index.css
+++ b/my-portfolio/resources/css/index.css
@@ -32,6 +32,7 @@ header {
   animation-delay: 1s;
   visibility: hidden;
   animation-fill-mode: forwards;
+  cursor: pointer;
 }
 
 .kaze {
@@ -69,6 +70,11 @@ ul {
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
+  cursor: pointer;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
 }
 
 .main {
@@ -77,52 +83,46 @@ ul {
   padding: 100px;
 }
 
-.first {
-  width: 400px;
-  padding-top: 150px;
-}
-
 .name {
-  width: 350px;
-  height: 180px;
+  padding-bottom: 100px;
+  width: 150px;
+  height: 200px;
   left: 240.01px;
   top: 351px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 60px;
-  line-height: 90px;
+  line-height: 70px;
   color: #fff;
+  text-shadow: 2px 2px #db52ea;
 }
 
 .role {
-  padding-bottom: 120px;
-  width: 350px;
-  height: 210px;
+  width: 40vw;
+  height: 540px;
   left: 235.01px;
   top: 570px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 28px;
-  line-height: 42px;
+  line-height: 35px;
   color: #fff;
 }
 
 .btn {
-  background-color: #a749d3;
-  width: 86px;
-  height: 27px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 27px;
-  color: #fff;
+  width: 206px;
+  height: 61px;
+  left: 235.01px;
+  top: 826px;
+  background: #c222d4;
+  border-radius: 5px;
 }
 
 .second {
-  width: 500px;
+  padding: 50px;
+  width: 70vw;
   height: 701px;
   left: 804.01px;
   top: 209px;
@@ -160,19 +160,19 @@ ul {
     justify-content: center;
   }
 
-  .first {
+  /* .first {
     width: 500px;
     height: 100vh;
     padding-top: 70px;
     padding-bottom: 30px;
-  }
+  } */
 
   .name {
     text-align: center;
-    height: 150px;
+    height: 200px;
     left: 240.01px;
     top: 351px;
-    padding: 50px;
+    padding: 100px 40px 100px 130px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -182,8 +182,8 @@ ul {
   }
 
   .role {
-    padding-top: 50px;
-    height: 160px;
+    padding: 50px 20px 20px 0;
+    height: 350px;
     left: 235.01px;
     top: 570px;
     font-family: 'Poppins', sans-serif;
@@ -197,10 +197,12 @@ ul {
   }
 
   .btn {
+    text-align: center;
+    margin-bottom: 40px;
     margin-left: 200px;
-    background-color: #c33ccc;
-    width: 130px;
-    height: 29px;
+    background-color: #c222d4;
+    width: 100px;
+    height: 30px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -214,7 +216,9 @@ ul {
     height: 701px;
     left: 804.01px;
     top: 209px;
-    background: url(/my-portfolio/resources/assets/main/585eb776-849a-48cf-a626-179b2db4e5ce.JPG);
+    background-color: aqua;
+
+    /* background: url(/my-portfolio/resources/assets/main/585eb776-849a-48cf-a626-179b2db4e5ce.JPG); */
     background-size: cover;
     background-repeat: no-repeat;
   }
